20121122 pokefinder/{pokemem.[ch]},ui/gtk/pokemem.c,ui/widget/pokemem.c,
         ui/win32/pokemem.c: fix presumed typo in pokemem_trainer_deactivate
         (Fred).
20121123 Makefile.am,configure.ac: don't interrupt COMPAT_OSNAME log with other
         checks. Avoid searching for windres when not building for Windows.
         Remove --without-windres flag, previously used as a workaround
         (Sergio).
20121125 movie.[ch]: make movie_start take a const char* filename (Fred).
20121125 ui/win32/{debugger.c,win32ui.c}: properly resize monospaced font with
         high DPI settings. Dynamically set initial width of some columns in the
         debugger on win32 UI (patch 3488036) (Sergio).
20121125 ui/win32/debugger.c: fix value used for breaking down the emulation
         when double-clicking the stack pane in the debugger on win32 UI
         (Sergio).
20121126 compat/win32/socket.c,compat/unix/socket.c,machines/machines_periph.h,
         movie_tables.h,movie.[ch],peripherals/Makefile.am,
         peripherals/disk/opus.h,peripherals/flash/{Makefile.am,am29f010.[ch]},
         peripherals/nic/{Makefile.am,enc28j60.h,w5100.c,w5100.h,
         w5100_internals.h,w5100_socket.c},peripherals/speccyboot.h,
         peripherals/specdrum.h,peripherals/spectranet.[ch],
         ui/win32/installer/fuse.nsi.in: update FSF address in GPL notices,
         change Phil e-mail address to @shadowmagic and remove postal address,
         fix hard-coded Id tags, and add missing properties (Sergio).
20121129 compat/{linux/Makefile.am,unix/Makefile.am,win32/Makefile.am},
         configure.ac,m4/ax_pthread.m4,peripherals/nic/Makefile.am,
         peripherals/spectranet.c,ui/options.dat,utils.c: allow the disabling of
         Spectranet code if required libraries are not present (patch #3589476)
         (Sergio).
20121202 Makefile.am: translate path used for makensis on cygwin (win32 port)
         (Sergio).