@@ -27,12 +27,11 @@
  * Well, `based' is an understatement, it's almost exactly the same. :-)
  */
    
+#include <config.h>
 
 #include <stdio.h>
 #include <string.h>
 #include <ctype.h>
-
-#include <config.h>
 
 #include "fuse.h"
 #include "machine.h"
