@@ -28,6 +28,8 @@
  * MAME's licence explicitly permits free use of info (even encourages it).
  */
 
+#include <config.h>
+
 #include "fuse.h"
 #include "machine.h"
 #include "movie.h"
