@@ -23,10 +23,7 @@
 
 */
 
-#include <windows.h>
-
 #include "about.h"
-#include "config.h"
 
 IDD_ABOUT DIALOGEX 0, 0, 186, 95
 STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
