@@ -52,7 +52,7 @@ _HyperlinkParentProc(HWND hwnd, UINT message, WPARAM wParam, LPARAM lParam)
     }
   case WM_DESTROY:
     {
-      SetWindowLong(hwnd, GWL_WNDPROC, (LONG) pfnOrigProc);
+      SetWindowLongPtr(hwnd, GWLP_WNDPROC, (LONG_PTR) pfnOrigProc);
       RemoveProp(hwnd, PROP_ORIGINAL_PROC);
       break;
     }
@@ -68,7 +68,7 @@ _HyperlinkProc(HWND hwnd, UINT message, WPARAM wParam, LPARAM lParam)
   switch (message) {
   case WM_DESTROY:
     {
-      SetWindowLong(hwnd, GWL_WNDPROC, (LONG) pfnOrigProc);
+      SetWindowLongPtr(hwnd, GWLP_WNDPROC, (LONG_PTR) pfnOrigProc);
       RemoveProp(hwnd, PROP_ORIGINAL_PROC);
 
       HFONT hOrigFont = (HFONT) GetProp(hwnd, PROP_ORIGINAL_FONT);
@@ -129,10 +129,10 @@ ConvertStaticToHyperlink(HWND hwndCtl)
 
   HWND hwndParent = GetParent(hwndCtl);
   if (NULL != hwndParent) {
-    WNDPROC pfnOrigProc = (WNDPROC) GetWindowLong(hwndParent, GWL_WNDPROC);
+    WNDPROC pfnOrigProc = (WNDPROC) GetWindowLongPtr(hwndParent, GWLP_WNDPROC);
     if (pfnOrigProc != _HyperlinkParentProc) {
       SetProp(hwndParent, PROP_ORIGINAL_PROC, (HANDLE) pfnOrigProc);
-      SetWindowLong(hwndParent, GWL_WNDPROC, (LONG) (WNDPROC) _HyperlinkParentProc);
+      SetWindowLongPtr(hwndParent, GWLP_WNDPROC, (LONG_PTR) (WNDPROC) _HyperlinkParentProc);
     }
   }
   /* Make sure the control will send notifications. */
@@ -142,9 +142,9 @@ ConvertStaticToHyperlink(HWND hwndCtl)
 
   /* Subclass the existing control. */
 
-  WNDPROC pfnOrigProc = (WNDPROC) GetWindowLong(hwndCtl, GWL_WNDPROC);
+  WNDPROC pfnOrigProc = (WNDPROC) GetWindowLongPtr(hwndCtl, GWLP_WNDPROC);
   SetProp(hwndCtl, PROP_ORIGINAL_PROC, (HANDLE) pfnOrigProc);
-  SetWindowLong(hwndCtl, GWL_WNDPROC, (LONG) (WNDPROC) _HyperlinkProc);
+  SetWindowLongPtr(hwndCtl, GWLP_WNDPROC, (LONG_PTR) (WNDPROC) _HyperlinkProc);
 
   /* Create an updated font by adding an underline. */
 
