@@ -31,7 +31,7 @@ EXSTYLE WS_EX_APPWINDOW
 CAPTION "Fuse - Select Rollback Point"
 FONT 8,"Ms Shell Dlg 2",400,0,1
 BEGIN
-    CONTROL         "",IDC_ROLLBACK_LV,WC_LISTVIEW,WS_TABSTOP | WS_BORDER | LVS_ALIGNLEFT | LVS_REPORT,0,0,125,75
+    CONTROL         "",IDC_ROLLBACK_LV,"SysListView32",WS_TABSTOP | WS_BORDER | LVS_ALIGNLEFT | LVS_REPORT,0,0,125,75, WS_EX_CLIENTEDGE
     DEFPUSHBUTTON   "OK",IDOK,5,80,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,70,80,50,14
 END
