@@ -4299,3 +4299,10 @@
          (Sergio).
 20121202 Makefile.am: translate path used for makensis on cygwin (win32 port)
          (Sergio).
+20121208 configure.ac,peripherals/flash/am29f010.c,peripherals/printer.c,
+         pokefinder/pokemem.c,rectangle.c,sound/{blipbuffer.c,win32sound.c},
+         sound.c,ui/win32/{about.rc,browse.rc,binary.{c,rc},debugger.rc,
+         hyperlinks.c,memorybrowser.{c,rc},picture.{c,rc},pokefinder.rc,
+         pokemem.{c,rc},rollback.rc,roms.c,select_template.rc,win32joystick.c,
+         win32ui.c},windres.rc: preliminary support for 64-bits binaries for
+         Windows (patch #3591613) (Sergio).
